# laba_4

./: CMakeLists.txt
include/: Array.h  Figure.h  Octagon.h  Point.h  Square.h  Triangle.h
src/: main.cpp
tests/: test.cpp
